# keckogeco

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  docs.yml
config/: README.md  gui.toml  instruments.example.toml
docs/: conf.py  development.md  index.md  overview.md
docs/api/: index.rst
docs/hardware/: components.md  design.md  index.md  temperatures.md
docs/instruments/: index.md  operations.md
docs/keck/: index.md  keywords.md
docs/user_guide/: index.md  installation.md  keck_operations.md  locking.md  menlo_flattener.md
keckogeco/: __init__.py  check.py  config.py  discovery.py  logsetup.py
keckogeco/comb/: __init__.py  actions.py  controller.py  keywords.py  monitors.py  state.py
keckogeco/comb/locking/: __init__.py  im_bias.py
keckogeco/comb/schema/: keywords.toml
keckogeco/drivers/: __init__.py  agilent_86142b.py  agiltron_switch.py  amonics_edfa.py  arduino_relay.py  base.py  clarity.py  errors.py  hk_shutter.py  ieee_block.py  instek_psu.py  keysight_fg33500.py  orion_laser.py  oz_voa.py  pendulum_cnt90.py  pritel_amp.py  rb_clock.py  srs_sim900.py  tds2024c.py  tec_tc720.py  thorlabs_ell12.py  transports.py  usb2408.py  waveshaper.py  yokogawa_osa.py
keckogeco/gui/: __init__.py  app.py  client.py  combfit.py  laptop.py  mainwindow.py  prefs.py  spectra.py  theme.py  widgets.py  yokogawa_app.py
keckogeco/server/: __init__.py  app.py
keckogeco/server/web/: index.html
ktl/: LFC.xml.sin  README.md  combd.conf.example  combd.sin  keyword-changes.md  ktl_gui.py
tests/: test_actions.py  test_amonics_edfa.py  test_arduino_relay.py  test_comb.py  test_combfit.py  test_config.py  test_discovery.py  test_gui_laptop.py  test_gui_prefs.py  test_gui_smoke.py  test_gui_spectra.py  test_instek_psu.py  test_instrument_base.py  test_ktl_dispatcher.py  test_ktl_gui.py  test_orion_laser.py  test_pritel_amp.py  test_rb_clock.py  test_server.py  test_srs_sim900.py  test_tds2024c.py  test_tec_tc720.py  test_thorlabs_ell12.py  test_tier2_drivers.py  test_transports.py  test_usb2408.py  test_waveshaper.py  test_yokogawa_osa.py
tools/: ell12_probe.ps1
