[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keckogeco"
description = "Control system for the Keck Observatory GHz Electro-Optic Comb (KeckLFC)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Hickstein", email = "DanHickstein@gmail.com" },
]
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "pyvisa",
    "pyserial",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "tomlkit",
]

[project.optional-dependencies]
gui = ["PyQt6", "pyqtgraph", "requests", "pytest-qt"]
daq = ["mcculw; platform_system == 'Windows'"]
dev = ["pytest", "httpx", "ruff", "pre-commit"]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-copybutton",
]

# No console-script entry points: everything runs via `python -m`
# (keckogeco.server.app, keckogeco.gui.app, keckogeco.check,
# keckogeco.discovery). Windows user-site installs put generated .exe
# shims on a directory that isn't on PATH, so the -m form is the one
# that always works.

[project.urls]
Repository = "https://github.com/danhickstein/keckogeco"
Documentation = "https://danhickstein.github.io/keckogeco/"

[tool.hatch.version]
path = "keckogeco/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["keckogeco"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "BLE",           # no blind except  (the old codebase had ~30 of them)
    "T20",           # no print()       (drivers must log, not print)
    "SIM",           # simplify
]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]
"docs/*" = ["T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
